<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:paddingVertical="@dimen/bottom_tb_spacing"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_search"
        android:orientation="vertical"
        android:id="@+id/ll_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/selector_navi_home"
            android:id="@+id/iv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Text.SemiBold.10dp"
            android:textColor="@color/selector_navi_title"
            android:layout_marginTop="@dimen/bottom_title_spacing"
            android:text="@string/tab_home"
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/bottom_tb_spacing"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/ll_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_meet"
        android:orientation="vertical"
        android:id="@+id/ll_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/selector_navi_search"
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Text.SemiBold.10dp"
            android:textColor="@color/selector_navi_title"
            android:layout_marginTop="@dimen/bottom_title_spacing"
            android:text="@string/tab_search"
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/bottom_tb_spacing"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/ll_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_chat"
        android:orientation="vertical"
        android:id="@+id/ll_meet"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/selector_navi_meet"
            android:id="@+id/iv_meet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Text.SemiBold.10dp"
            android:textColor="@color/selector_navi_title"
            android:layout_marginTop="@dimen/bottom_title_spacing"
            android:text="@string/tab_meet"
            android:id="@+id/tv_meet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/bottom_tb_spacing"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/ll_meet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_my"
        android:orientation="vertical"
        android:id="@+id/ll_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/selector_navi_chat"
            android:id="@+id/iv_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Text.SemiBold.10dp"
            android:textColor="@color/selector_navi_title"
            android:layout_marginTop="@dimen/bottom_title_spacing"
            android:text="@string/tab_chat"
            android:id="@+id/tv_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="@dimen/bottom_tb_spacing"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/ll_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:id="@+id/ll_my"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/selector_navi_my"
            android:id="@+id/iv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Text.SemiBold.10dp"
            android:textColor="@color/selector_navi_title"
            android:layout_marginTop="@dimen/bottom_title_spacing"
            android:text="@string/tab_my"
            android:id="@+id/tv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>